src/styles.scss
// Custom Theming for Angular Material
// For more information: https://material.angular.io/guide/theming
@import '~@angular/material/theming';
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat-core();

@font-face {
  font-family: 'Surogat Black Italic';
  src: url('assets/fonts/SurogatCond-BlackItalic.eot');
  src: url('assets/fonts/SurogatCond-BlackItalic.otf') format('opentype'),
    url('assets/fonts/SurogatCond-BlackItalic.woff') format('woff'),
    url('assets/fonts/SurogatCond-BlackItalic.ttf') format('truetype');
  font-style: normal;
}

@font-face {
  font-family: 'TyponineSansPro Text';
  src: url('assets/fonts/TyponineSansPro Text.eot');
  src: url('assets/fonts/TyponineSansPro Text.otf') format('opentype'),
    url('assets/fonts/TyponineSansPro Text.woff') format('woff'),
    url('assets/fonts/TyponineSansPro Text.ttf') format('truetype');
  font-style: normal;
}

// Define a custom typography config that overrides the font-family as well as the
// `headlines` and `body-1` levels.
$custom-typography: mat-typography-config(
  $font-family: '"TyponineSansPro Text", Roboto, sans-serif',
  $headline: mat-typography-level(32px, 48px, 700),
  $body-1: mat-typography-level(16px, 24px, 500),
);
@include angular-material-typography($custom-typography);

// Define the palettes for your theme using the Material Design palettes available in palette.scss
// (imported above). For each palette, you can optionally specify a default, lighter, and darker
// hue. Available color palettes: https://material.io/design/color/
$zrak-primary: mat-palette($mat-indigo);
$zrak-accent: mat-palette($mat-pink, A200, A100, A400);

// The warn palette is optional (defaults to red).
$zrak-warn: mat-palette($mat-red);

// Create the theme object. A theme consists of configurations for individual
// theming systems such as "color" or "typography".
$zrak-theme: mat-light-theme(
  (
    color: (
      primary: $zrak-primary,
      accent: $zrak-accent,
      warn: $zrak-warn,
    ),
  )
);

// Include theme styles for core and each component used in your app.
// Alternatively, you can import and @include the theme mixins for each component
// that you are using.
@include angular-material-theme($zrak-theme);

/* You can add global styles to this file, and also import other style files */

.leaflet-container {
  background-color: #fff !important;
}
html,
body {
  height: 100%;
  min-height: 100% !important;
}

html {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  height: -webkit-fill-available;
}

body {
  margin: 0;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

*,
*:before,
*:after {
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.content {
  display: flex;
  flex-direction: column;
  max-width: 1000px;
  margin: 40px auto;
  padding: 0 20px;
  @media screen and (min-width: 960px) {
    padding: 0 40px;
  }
  .page-title {
    text-align: left;
  }
}

